# website-intelligence-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  SETUP_GITHUB.md  docker-compose.yml  package.json  pyproject.toml  requirements.txt  setup_github.sh
.github/workflows/: cd.yml  ci.yml  release.yml  scheduled.yml
examples/: example_usage.py
helm/website-intelligence-platform/: Chart.yaml  values.yaml
k8s/base/: deployment.yaml  kustomization.yaml  service.yaml
scripts/: quick_start.sh
src/api/: main.py
src/config/: client_manager.py
src/crawlers/: base_crawler.py  dynamic_crawler.py  static_crawler.py
src/extractors/: llm_summarizer.py
src/memory/: vector_store.py
src/models/: database.py  schemas.py
src/services/: change_detector.py  orchestrator.py
src/utils/: rate_limiter.py
tests/: conftest.py
tests/unit/: test_schemas.py
